<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_back"
        android:icon="@drawable/ic_back_24"
        android:title="@string/s_mi_back"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mi_email"
        android:icon="@drawable/ic_email_24"
        android:title="@string/s_mi_email"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/mi_setting"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/s_nav_setting"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/mi_about"
        android:icon="@drawable/ic_info_24"
        android:title="@string/s_nav_info"
        app:showAsAction="ifRoom"/>


</menu>
